--- a/cg/index.html
+++ b/cg/index.html
@@ -478,7 +478,7 @@ Computer Graphics</font></b></p>
 				<span lang="EN-US">2025.3.18</span></font></p></td>
 				<td valign="top" style="width: 366px; border-left: medium none; border-right: 1.0pt solid windowtext; border-top: medium none; border-bottom: 1.0pt solid windowtext; padding-left: 5.4pt; padding-right: 5.4pt; padding-top: 0cm; padding-bottom: 0cm">
 				<p class="MsoNormal"><font face="Times New Roman" size="4">
-				<span lang="EN-US">4-几何建模2</span></font></p><p class="MsoNormal">
+				<span lang="EN-US">4-几何建模2-B样条</span></font></p><p class="MsoNormal">
 				</p></td>
 				<td valign="top" style="width: 277px; border-left: medium none; border-right: 1.0pt solid windowtext; border-top: medium none; border-bottom: 1.0pt solid windowtext; padding-left: 5.4pt; padding-right: 5.4pt; padding-top: 0cm; padding-bottom: 0cm">
 				<p class="MsoNormal">
@@ -487,6 +487,23 @@ Computer Graphics</font></b></p>
 				</p>
 				</td>
 			</tr>
+<!-- 			<tr>
+				<td valign="top" style="width: 171px; border-left: 1.0pt solid windowtext; border-right: 1.0pt solid windowtext; border-top: medium none; border-bottom: 1.0pt solid windowtext; padding-left: 5.4pt; padding-right: 5.4pt; padding-top: 0cm; padding-bottom: 0cm">
+				<p class="MsoNormal"><span lang="en-us">
+				<font face="Times New Roman" size="4">第五周</font></span></p><p class="MsoNormal">
+				<font face="Times New Roman" size="4">
+				<span lang="EN-US">2025.3.25</span></font></p></td>
+				<td valign="top" style="width: 366px; border-left: medium none; border-right: 1.0pt solid windowtext; border-top: medium none; border-bottom: 1.0pt solid windowtext; padding-left: 5.4pt; padding-right: 5.4pt; padding-top: 0cm; padding-bottom: 0cm">
+				<p class="MsoNormal"><font face="Times New Roman" size="4">
+				<span lang="EN-US">5-几何建模3-网格处理</span></font></p><p class="MsoNormal">
+				</p></td>
+				<td valign="top" style="width: 277px; border-left: medium none; border-right: 1.0pt solid windowtext; border-top: medium none; border-bottom: 1.0pt solid windowtext; padding-left: 5.4pt; padding-right: 5.4pt; padding-top: 0cm; padding-bottom: 0cm">
+				<p class="MsoNormal">
+				<span lang="en-us"><font face="Times New Roman" size="4">
+				<a href="https://pan.bnu.edu.cn/l/t173Pg" target="_blank">PPT（课前版本）</a></font></span></p><p class="MsoNormal">
+				</p>
+				</td>
+			</tr> -->
 			</tbody></table>
 		<p class="MsoNormal">&nbsp;</p></td>
       </tr>
