--- a/cg/index.html
+++ b/cg/index.html
@@ -369,9 +369,9 @@ Computer Graphics</font></b></p>
       <tr>
         <td>
 		<ul>
-			<li>
+			<!-- <li>
 			<p align="left"><font size="4" face="Times New Roman">
-			2025年3月6日：【实验内容】第一次实验作业内容已发布</font></p></li>
+			2025年3月6日：【实验内容】第一次实验作业内容已发布</font></p></li> -->
 			<li>
 			<p align="left"><font size="4" face="Times New Roman">
 			2025年2月25日：【课程主页】本课程的主页已搭建，后续添加模块和内容</font></p></li>
