--- a/cg/index.html
+++ b/cg/index.html
@@ -425,7 +425,7 @@ Computer Graphics</font></b></p>
 				<span lang="EN-US">2025.2.25</span></font></p></td>
 				<td valign="top" style="width: 366px; border-left: medium none; border-right: 1.0pt solid windowtext; border-top: medium none; border-bottom: 1.0pt solid windowtext; padding-left: 5.4pt; padding-right: 5.4pt; padding-top: 0cm; padding-bottom: 0cm">
 				<p class="MsoNormal"><font face="Times New Roman" size="4">
-				<span lang="EN-US">1-绪论</span></font></p><p class="MsoNormal">
+				<span lang="EN-US">绪论</span></font></p><p class="MsoNormal">
 				</p></td>
 				<td valign="top" style="width: 277px; border-left: medium none; border-right: 1.0pt solid windowtext; border-top: medium none; border-bottom: 1.0pt solid windowtext; padding-left: 5.4pt; padding-right: 5.4pt; padding-top: 0cm; padding-bottom: 0cm">
 				<p class="MsoNormal">
@@ -441,7 +441,7 @@ Computer Graphics</font></b></p>
 				<span lang="EN-US">2025.3.4</span></font></p></td>
 				<td valign="top" style="width: 366px; border-left: medium none; border-right: 1.0pt solid windowtext; border-top: medium none; border-bottom: 1.0pt solid windowtext; padding-left: 5.4pt; padding-right: 5.4pt; padding-top: 0cm; padding-bottom: 0cm">
 				<p class="MsoNormal"><font face="Times New Roman" size="4">
-				<span lang="EN-US">2-基础概念</span></font></p><p class="MsoNormal">
+				<span lang="EN-US">基础概念</span></font></p><p class="MsoNormal">
 				</p></td>
 				<td valign="top" style="width: 277px; border-left: medium none; border-right: 1.0pt solid windowtext; border-top: medium none; border-bottom: 1.0pt solid windowtext; padding-left: 5.4pt; padding-right: 5.4pt; padding-top: 0cm; padding-bottom: 0cm">
 				<p class="MsoNormal">
@@ -457,7 +457,7 @@ Computer Graphics</font></b></p>
 				<span lang="EN-US">2025.3.11</span></font></p></td>
 				<td valign="top" style="width: 366px; border-left: medium none; border-right: 1.0pt solid windowtext; border-top: medium none; border-bottom: 1.0pt solid windowtext; padding-left: 5.4pt; padding-right: 5.4pt; padding-top: 0cm; padding-bottom: 0cm">
 				<p class="MsoNormal"><font face="Times New Roman" size="4">
-				<span lang="EN-US">3-几何建模1-Bézier曲线</span></font></p><p class="MsoNormal">
+				<span lang="EN-US">几何建模1-Bézier曲线</span></font></p><p class="MsoNormal">
 				</p></td>
 				<td valign="top" style="width: 277px; border-left: medium none; border-right: 1.0pt solid windowtext; border-top: medium none; border-bottom: 1.0pt solid windowtext; padding-left: 5.4pt; padding-right: 5.4pt; padding-top: 0cm; padding-bottom: 0cm">
 				<p class="MsoNormal">
@@ -478,7 +478,7 @@ Computer Graphics</font></b></p>
 				<span lang="EN-US">2025.3.18</span></font></p></td>
 				<td valign="top" style="width: 366px; border-left: medium none; border-right: 1.0pt solid windowtext; border-top: medium none; border-bottom: 1.0pt solid windowtext; padding-left: 5.4pt; padding-right: 5.4pt; padding-top: 0cm; padding-bottom: 0cm">
 				<p class="MsoNormal"><font face="Times New Roman" size="4">
-				<span lang="EN-US">4-几何建模2-B样条</span></font></p><p class="MsoNormal">
+				<span lang="EN-US">几何建模2-B样条</span></font></p><p class="MsoNormal">
 				</p></td>
 				<td valign="top" style="width: 277px; border-left: medium none; border-right: 1.0pt solid windowtext; border-top: medium none; border-bottom: 1.0pt solid windowtext; padding-left: 5.4pt; padding-right: 5.4pt; padding-top: 0cm; padding-bottom: 0cm">
 				<p class="MsoNormal">
@@ -495,7 +495,7 @@ Computer Graphics</font></b></p>
 				<span lang="EN-US">2025.3.25</span></font></p></td>
 				<td valign="top" style="width: 366px; border-left: medium none; border-right: 1.0pt solid windowtext; border-top: medium none; border-bottom: 1.0pt solid windowtext; padding-left: 5.4pt; padding-right: 5.4pt; padding-top: 0cm; padding-bottom: 0cm">
 				<p class="MsoNormal"><font face="Times New Roman" size="4">
-				<span lang="EN-US">5-几何建模3-网格处理</span></font></p><p class="MsoNormal">
+				<span lang="EN-US">几何建模3-网格处理</span></font></p><p class="MsoNormal">
 				</p></td>
 				<td valign="top" style="width: 277px; border-left: medium none; border-right: 1.0pt solid windowtext; border-top: medium none; border-bottom: 1.0pt solid windowtext; padding-left: 5.4pt; padding-right: 5.4pt; padding-top: 0cm; padding-bottom: 0cm">
 				<p class="MsoNormal">
