--- a/cg/index.html
+++ b/cg/index.html
@@ -578,6 +578,24 @@ Computer Graphics</font></b></p>
 				<p class="MsoNormal">
 				</p></td>
 			</tr>
+			<tr>
+				<td valign="top" style="width: 171px; border-left: 1.0pt solid windowtext; border-right: 1.0pt solid windowtext; border-top: medium none; border-bottom: 1.0pt solid windowtext; padding-left: 5.4pt; padding-right: 5.4pt; padding-top: 0cm; padding-bottom: 0cm">
+				<p class="MsoNormal"><span lang="en-us">
+				<font face="Times New Roman" size="4">第五周</font></span></p><p class="MsoNormal">
+				<font face="Times New Roman" size="4">
+				<span lang="EN-US">2025.3.27</span></font></p></td>
+				<td valign="top" style="width: 366px; border-left: medium none; border-right: 1.0pt solid windowtext; border-top: medium none; border-bottom: 1.0pt solid windowtext; padding-left: 5.4pt; padding-right: 5.4pt; padding-top: 0cm; padding-bottom: 0cm">
+				<p class="MsoNormal"><font face="Times New Roman" size="4">
+				<span lang="EN-US">摄像机</span></font></p><p class="MsoNormal">
+				</p></td>
+				<td valign="top" style="width: 277px; border-left: medium none; border-right: 1.0pt solid windowtext; border-top: medium none; border-bottom: 1.0pt solid windowtext; padding-left: 5.4pt; padding-right: 5.4pt; padding-top: 0cm; padding-bottom: 0cm">
+				<p class="MsoNormal"><font face="Times New Roman" size="4">
+				<a href="https://pan.bnu.edu.cn/l/m2DcG4" target="_blank">实验三</a></font></p>
+				<!-- <p class="MsoNormal"><font face="Times New Roman" size="4">
+				<a href="https://pan.bnu.edu.cn/l/O1GhT2" target="_blank">实验二-参考操作教程</a></font></p> -->
+				<p class="MsoNormal">
+				</p></td>
+			</tr>
 			</tbody></table>
 		<p class="MsoNormal">&nbsp;</p><p class="MsoNormal"><span lang="EN-US">
 		<font size="4" face="黑体">参考教材：</font></span></p><ul>
