--- a/cg/index.html
+++ b/cg/index.html
@@ -346,8 +346,7 @@ Computer Graphics</font></b></p>
 	<tbody><tr>
 		<td>
 		<p align="center"><font size="4"><b>网站导航</b></font></p>
-		<p align="center"><b><font size="4"><a href="#Intro">课程简介</a>&nbsp;&nbsp;&nbsp; <a href="#Syllabus">课程安排</a></a>&nbsp;&nbsp;&nbsp;&nbsp; <a href="#Experiment">实验内容</a>&nbsp;&nbsp;&nbsp; 
-		<a href="#Advanced">相关资源</a></font></b></p></td>
+		<p align="center"><b><font size="4"><a href="#Intro">课程简介</a>&nbsp;&nbsp;&nbsp; <a href="#Syllabus">课程安排</a></a>&nbsp;&nbsp;&nbsp;&nbsp; <a href="#Experiment">实验内容</a>&nbsp;&nbsp;&nbsp; <a href="#Homework">课程作业</a>&nbsp;&nbsp;&nbsp; <a href="#Advanced">相关资源</a></font></b></p></td>
 	</tr>
 </tbody></table>
 		</td>
@@ -590,14 +589,44 @@ Computer Graphics</font></b></p>
 				</p></td>
 				<td valign="top" style="width: 277px; border-left: medium none; border-right: 1.0pt solid windowtext; border-top: medium none; border-bottom: 1.0pt solid windowtext; padding-left: 5.4pt; padding-right: 5.4pt; padding-top: 0cm; padding-bottom: 0cm">
 				<p class="MsoNormal"><font face="Times New Roman" size="4">
-				<a href="https://pan.bnu.edu.cn/l/m2DcG4" target="_blank">实验三</a></font></p>
-				<!-- <p class="MsoNormal"><font face="Times New Roman" size="4">
-				<a href="https://pan.bnu.edu.cn/l/O1GhT2" target="_blank">实验二-参考操作教程</a></font></p> -->
+				<a href="https://pan.bnu.edu.cn/l/w192o4" target="_blank">实验三</a></font></p>
+				<p class="MsoNormal"><font face="Times New Roman" size="4">
+				<a href="https://pan.bnu.edu.cn/l/q1q1l0" target="_blank">实验三-参考操作教程</a></font></p>
 				<p class="MsoNormal">
 				</p></td>
 			</tr>
 			</tbody></table>
-		<p class="MsoNormal">&nbsp;</p><p class="MsoNormal"><span lang="EN-US">
+		</td>
+		</tr>
+
+       <tr>
+        <td><p class="title1"><font size="5" face="黑体" color="#000000">
+		<a name="Homework"></a>作业内容：</font></p></td>
+      </tr>
+      <tr>
+      	<td>
+			<ul>
+				<li>
+				<p class="MsoNormal"><span lang="en-us">【<b><font face="华文楷体">第一次平时作业：包含实验一/二/三</font></b>】</span></p></li>
+				<p class="MsoNormal"><span lang="en-us"><b><font face="华文楷体">作业题目及分值：</font></b><a href="https://pan.bnu.edu.cn/l/m1EanG" target="_blank">https://pan.bnu.edu.cn/l/m1EanG</a></span></p>
+				<p class="MsoNormal"><span lang="en-us"><b><font face="华文楷体">提交链接：</font></b><a href="https://pan.bnu.edu.cn/l/T1YdOs" target="_blank">https://pan.bnu.edu.cn/l/T1YdOs</a><b><font face="华文楷体">，命名方式：学号-姓名-第一次平时作业.pdf，截止时间：2025年3月23日23:59</font></b></span></p>
+			    </li>
+			</ul>
+		</td>
+	   </tr>
+        <td>
+<hr>
+		</td>      
+      <tr>
+        <td></td>
+      </tr>
+      
+      <tr>
+        <td><b><font size="5" face="黑体"><a name="Advanced"></a>相关资源：</font></b></td>
+      </tr>
+      <tr>
+        <td>
+        <p class="MsoNormal">&nbsp;</p><p class="MsoNormal"><span lang="EN-US">
 		<font size="4" face="黑体">参考教材：</font></span></p><ul>
 			<li>
 			<p class="MsoNormal"><span lang="en-us">【<b><font face="华文楷体">计算机图形学基础教程</font></b>】</span></p></li>
@@ -611,17 +640,12 @@ Computer Graphics</font></b></p>
 			<p class="MsoNormal"><span lang="en-us">【<b><font face="华文楷体">计算机图形学基础（英文教材）</font></b>】</span></p></li>
 			<li>
 			<p class="MsoNormal"><span lang="en-us"><a href="https://zhuanlan.zhihu.com/p/655456610" target="_blank">Fundamentals of Computer Graphics, by Steve Marschner, Peter Shirley</a></span></p></li>
-		</ul>
-		<p class="MsoNormal">&nbsp;</p></td>
-      </tr>
-      <tr>
-        <td></td>
-      </tr>
-      <tr>
-        <td><b><font size="5" face="黑体"><a name="Advanced"></a>相关资源：</font></b></td>
-      </tr>
-      <tr>
-        <td>
+		</td>
+	  </tr>
+	  <tr>
+		<td>
+		<p class="MsoNormal">&nbsp;</p><p class="MsoNormal"><span lang="EN-US">
+		<font size="4" face="黑体">参考课程：</font></span></p>
 		<ul>
 			<li>
 			<p class="MsoNormal"><span lang="en-us">【<b><font face="华文楷体">前置基础课程</font></b>】</span></p></li>
