--- a/cg/index.html
+++ b/cg/index.html
@@ -609,7 +609,7 @@ Computer Graphics</font></b></p>
 				<li>
 				<p class="MsoNormal"><span lang="en-us">【<b><font face="华文楷体">第一次平时作业：包含实验一/二/三</font></b>】</span></p></li>
 				<p class="MsoNormal"><span lang="en-us"><b><font face="华文楷体">作业题目及分值：</font></b><a href="https://pan.bnu.edu.cn/l/m1EanG" target="_blank">https://pan.bnu.edu.cn/l/m1EanG</a></span></p>
-				<p class="MsoNormal"><span lang="en-us"><b><font face="华文楷体">提交链接：</font></b><a href="https://pan.bnu.edu.cn/l/T1YdOs" target="_blank">https://pan.bnu.edu.cn/l/T1YdOs</a><b><font face="华文楷体">，命名方式：学号-姓名-第一次平时作业.pdf，截止时间：2025年4月6日23:59</font></b></span></p>
+				<p class="MsoNormal"><span lang="en-us"><b><font face="华文楷体">提交链接：</font></b><a href="https://pan.bnu.edu.cn/l/T1YdOs" target="_blank">https://pan.bnu.edu.cn/l/T1YdOs</a><b><font face="华文楷体">，命名方式：学号-姓名-第一次平时作业，.pdf或.zip等压缩包格式，截止时间：2025年4月6日23:59</font></b></span></p>
 			    </li>
 			</ul>
 		</td>
