--- a/aw/index.html
+++ b/aw/index.html
@@ -495,17 +495,18 @@ b)在DBLP查找某一期刊或会议在某一年份的：<br />
 			<ul>
 				<li>
 				<p class="MsoNormal"><span lang="en-us">【<b><font face="华文楷体">第二次作业：文献阅读（分组作业）</font></b>】</span></p></li>
+				<p class="MsoNormal"><span lang="en-us"><b><font face="华文楷体">提交链接：</font></b><a href="https://pan.bnu.edu.cn/l/F1xHVs" target="_blank">https://pan.bnu.edu.cn/l/F1xHVs</a><b><font face="华文楷体">，命名方式：小组XX-第二次平时作业.pptx，PPT最后加上一页写上小组成员姓名及分工情况等信息，截止时间：2025年4月13日23:59</font></b></span></p></li>
 				<li><font size="4">小组论文分享报告内容包含论文十问中的至少4问（Q1、Q4、Q5、Q6）：</font></li>
 Q1 论文试图解决什么问题？<br />
 Q2 这是否是一个新的问题？<br />
 Q3 这篇文章要验证一个什么科学假设？<br />
 Q4 有哪些相关研究？如何归类？谁是这一课题在领域内值得关注的研究者？<br />
-Q5 论文中提到的解决方案之关键是什么？<br />
+Q5 论文中提出解决方案的关键是什么？<br />
 Q6 论文中的实验是如何设计的？<br />
 Q7 用于定量评估的数据集是什么？代码有没有开源？<br />
 Q8 论文中的实验及结果有没有很好地支持需要验证的科学假设？<br />
 Q9 这篇论文到底有什么贡献？<br />
-Q10 下一步呢？有什么工作可以继续深入？<br />
+Q10 下一步有什么工作可以继续深入？<br />
 			</ul>
 		</td>
         <td>
