--- a/aw/index.html
+++ b/aw/index.html
@@ -495,7 +495,7 @@ b)在DBLP查找某一期刊或会议在某一年份的：<br />
 			<ul>
 				<li>
 				<p class="MsoNormal"><span lang="en-us">【<b><font face="华文楷体">第二次作业：文献阅读（分组作业）</font></b>】</span></p></li>
-				<p class="MsoNormal"><span lang="en-us"><b><font face="华文楷体">提交链接：</font></b><a href="https://pan.bnu.edu.cn/l/F1xHVs" target="_blank">https://pan.bnu.edu.cn/l/F1xHVs</a><b><font face="华文楷体">，命名方式：小组XX-第二次平时作业.pptx，PPT最后加上一页写上小组成员姓名及分工情况等信息，截止时间：2025年4月13日23:59</font></b></span></p></li>
+				<p class="MsoNormal"><span lang="en-us"><b><font face="华文楷体">提交链接：</font></b><a href="https://pan.bnu.edu.cn/l/F1xHVs" target="_blank">https://pan.bnu.edu.cn/l/F1xHVs</a><b><font face="华文楷体">，命名方式：小组XX-第二次平时作业-论文阅读报告.pptx，PPT最后加上一页写上小组成员姓名及分工情况等信息，截止时间：2025年4月13日23:59</font></b></span></p></li>
 				<li><font size="4">小组论文分享报告内容包含论文十问中的至少4问（Q1、Q4、Q5、Q6）：</font></li>
 Q1 论文试图解决什么问题？<br />
 Q2 这是否是一个新的问题？<br />
