--- a/cg/index.html
+++ b/cg/index.html
@@ -657,8 +657,14 @@ Computer Graphics</font></b></p>
 				</p></td>
 				<td valign="top" style="width: 277px; border-left: medium none; border-right: 1.0pt solid windowtext; border-top: medium none; border-bottom: 1.0pt solid windowtext; padding-left: 5.4pt; padding-right: 5.4pt; padding-top: 0cm; padding-bottom: 0cm">
 				<p class="MsoNormal"><font face="Times New Roman" size="4">
-				<a href="https://github.com/facebookresearch/DensePose/tree/main/notebooks" target="_blank">人体模型网格参数化示例</a></font></p>
+				<a href="https://pan.bnu.edu.cn/l/X1fn99" target="_blank">实验四-实验任务</a></font></p>
 				<p class="MsoNormal">
+				<p class="MsoNormal"><font face="Times New Roman" size="4">
+				<a href="https://pan.bnu.edu.cn/l/f1qsur" target="_blank">实验四-实验数据</a></font></p>
+				<p class="MsoNormal">
+				<!-- <p class="MsoNormal"><font face="Times New Roman" size="4">
+				<a href="https://github.com/facebookresearch/DensePose/tree/main/notebooks" target="_blank">人体模型网格参数化示例</a></font></p>
+				<p class="MsoNormal"> -->
 				</p></td>
 			</tr>
 			</tbody></table>
