--- a/cg/index.html
+++ b/cg/index.html
@@ -641,7 +641,7 @@ Computer Graphics</font></b></p>
 				</p></td>
 				<td valign="top" style="width: 277px; border-left: medium none; border-right: 1.0pt solid windowtext; border-top: medium none; border-bottom: 1.0pt solid windowtext; padding-left: 5.4pt; padding-right: 5.4pt; padding-top: 0cm; padding-bottom: 0cm">
 				<p class="MsoNormal"><font face="Times New Roman" size="4">
-				<a href="https://pan.bnu.edu.cn/l/T1YeJG" target="_blank">实验四-Python环境准备参考操作教程</a></font></p>
+				<a href="https://pan.bnu.edu.cn/l/L1fndx" target="_blank">实验四-Python环境准备参考操作教程</a></font></p>
 				<p class="MsoNormal">
 				</p></td>
 			</tr>
