--- a/cg/index.html
+++ b/cg/index.html
@@ -533,6 +533,23 @@ Computer Graphics</font></b></p>
 				<td valign="top" style="width: 277px; border-left: medium none; border-right: 1.0pt solid windowtext; border-top: medium none; border-bottom: 1.0pt solid windowtext; padding-left: 5.4pt; padding-right: 5.4pt; padding-top: 0cm; padding-bottom: 0cm">
 				<p class="MsoNormal">
 				<span lang="en-us"><font face="Times New Roman" size="4">
+				<a href="https://pan.bnu.edu.cn/l/t173Pg" target="_blank">PPT</a></font></span></p><p class="MsoNormal">
+				</p>
+				</td>
+			</tr>
+			<tr>
+				<td valign="top" style="width: 171px; border-left: 1.0pt solid windowtext; border-right: 1.0pt solid windowtext; border-top: medium none; border-bottom: 1.0pt solid windowtext; padding-left: 5.4pt; padding-right: 5.4pt; padding-top: 0cm; padding-bottom: 0cm">
+				<p class="MsoNormal"><span lang="en-us">
+				<font face="Times New Roman" size="4">第八周</font></span></p><p class="MsoNormal">
+				<font face="Times New Roman" size="4">
+				<span lang="EN-US">2025.4.15</span></font></p></td>
+				<td valign="top" style="width: 366px; border-left: medium none; border-right: 1.0pt solid windowtext; border-top: medium none; border-bottom: 1.0pt solid windowtext; padding-left: 5.4pt; padding-right: 5.4pt; padding-top: 0cm; padding-bottom: 0cm">
+				<p class="MsoNormal"><font face="Times New Roman" size="4">
+				<span lang="EN-US">渲染-光线追踪</span></font></p><p class="MsoNormal">
+				</p></td>
+				<td valign="top" style="width: 277px; border-left: medium none; border-right: 1.0pt solid windowtext; border-top: medium none; border-bottom: 1.0pt solid windowtext; padding-left: 5.4pt; padding-right: 5.4pt; padding-top: 0cm; padding-bottom: 0cm">
+				<p class="MsoNormal">
+				<span lang="en-us"><font face="Times New Roman" size="4">
 				<a href="https://pan.bnu.edu.cn/l/t173Pg" target="_blank">PPT（课前版本）</a></font></span></p><p class="MsoNormal">
 				</p>
 				</td>
