--- a/cg/index.html
+++ b/cg/index.html
@@ -700,7 +700,7 @@ Computer Graphics</font></b></p>
 				<p class="MsoNormal">
 				</p></td>
 			</tr>
-			<!-- <tr>
+			<tr>
 				<td valign="top" style="width: 171px; border-left: 1.0pt solid windowtext; border-right: 1.0pt solid windowtext; border-top: medium none; border-bottom: 1.0pt solid windowtext; padding-left: 5.4pt; padding-right: 5.4pt; padding-top: 0cm; padding-bottom: 0cm">
 				<p class="MsoNormal"><span lang="en-us">
 				<font face="Times New Roman" size="4">第九周</font></span></p><p class="MsoNormal">
@@ -712,10 +712,10 @@ Computer Graphics</font></b></p>
 				</p></td>
 				<td valign="top" style="width: 277px; border-left: medium none; border-right: 1.0pt solid windowtext; border-top: medium none; border-bottom: 1.0pt solid windowtext; padding-left: 5.4pt; padding-right: 5.4pt; padding-top: 0cm; padding-bottom: 0cm">
 				<p class="MsoNormal"><font face="Times New Roman" size="4">
-				<a href="https://pan.bnu.edu.cn/l/dY97L8" target="_blank">实验五-实验任务</a></font></p>
+				<a href="https://pan.bnu.edu.cn/l/dmm5le" target="_blank">实验五-实验任务</a></font></p>
 				<p class="MsoNormal">
 				</p></td>
-			</tr> -->
+			</tr>
 			</tbody></table>
 		</td>
 		</tr>
