--- a/cg/index.html
+++ b/cg/index.html
@@ -730,6 +730,8 @@ Computer Graphics</font></b></p>
 				<td valign="top" style="width: 277px; border-left: medium none; border-right: 1.0pt solid windowtext; border-top: medium none; border-bottom: 1.0pt solid windowtext; padding-left: 5.4pt; padding-right: 5.4pt; padding-top: 0cm; padding-bottom: 0cm">
 				<p class="MsoNormal"><font face="Times New Roman" size="4">
 				<a href="https://pan.bnu.edu.cn/l/dmm5le" target="_blank">实验五-实验任务</a></font></p>
+				<p class="MsoNormal"><font face="Times New Roman" size="4">
+				<a href="https://pan.bnu.edu.cn/l/p1zKYA" target="_blank">实验五-参考操作教程</a></font></p>
 				<p class="MsoNormal">
 				</p></td>
 			</tr>
