--- a/cg/index.html
+++ b/cg/index.html
@@ -725,7 +725,7 @@ Computer Graphics</font></b></p>
 				<span lang="EN-US">2025.4.24</span></font></p></td>
 				<td valign="top" style="width: 366px; border-left: medium none; border-right: 1.0pt solid windowtext; border-top: medium none; border-bottom: 1.0pt solid windowtext; padding-left: 5.4pt; padding-right: 5.4pt; padding-top: 0cm; padding-bottom: 0cm">
 				<p class="MsoNormal"><font face="Times New Roman" size="4">
-				<span lang="EN-US">实验五</span></font></p><p class="MsoNormal">
+				<span lang="EN-US">实验五-网格模型加载与渲染</span></font></p><p class="MsoNormal">
 				</p></td>
 				<td valign="top" style="width: 277px; border-left: medium none; border-right: 1.0pt solid windowtext; border-top: medium none; border-bottom: 1.0pt solid windowtext; padding-left: 5.4pt; padding-right: 5.4pt; padding-top: 0cm; padding-bottom: 0cm">
 				<p class="MsoNormal"><font face="Times New Roman" size="4">
