--- a/aw/index.html
+++ b/aw/index.html
@@ -580,6 +580,10 @@ Q10 下一步有什么工作可以继续深入？<br />
 				<p class="MsoNormal"><span lang="en-us">【<b><font face="华文楷体">论文阅读</font></b>】</span></p></li>
 				<li><font size="4">沈向洋-论文十问-系列报告：《<a href="https://space.bilibili.com/1706874133/lists/86598" target="_blank">CV专题</a>》</font></li>
 				<li><font size="4">沈向洋-论文十问-系列报告：《<a href="https://space.bilibili.com/1706874133/lists/422599" target="_blank">NLP系列</a>》</font></li>
+				<p class="MsoNormal"><span lang="en-us">【<b><font face="华文楷体">论文查找与梳理</font></b>】</span></p></li>
+				<li><font size="4">多关键词高亮插件：<a href="https://chromewebstore.google.com/detail/multi-highlight/ghinpogonpmlphfkmnjfapdaoaainejn" target="_blank">Chrome multi-highlight</a></font></li>
+				<li><font size="4">文献管理工具：Zotero、Mendeley、ReadPaper等</font></li>
+				<li><font size="4">AI辅助阅读工具：https://papers.cool等</font></li>
 				<p class="MsoNormal"><span lang="en-us">【<b><font face="华文楷体">论文写作</font></b>】</span></p></li>
 				<li><font size="4">LaTeX在线编辑平台：</font></li></p>
 				<a href="https://www.overleaf.com" target="_blank">https://www.overleaf.com</a></p>
@@ -592,7 +596,7 @@ Q10 下一步有什么工作可以继续深入？<br />
 				<a href="https://ctan.org/pkg/excel2latex?lang=en" target="_blank">https://ctan.org/pkg/excel2latex?lang=en</a></p>
 				<li><font size="4">获取文献的BibTeX：</font></li></p>
 				<a href="https://scholar.google.com" target="_blank">谷歌学术</a></p>
-				<a href="https://dblp.uni-trier.de" target="_blank">https://dblp.uni-trier.de</a></p>
+				<a href="https://dblp.uni-trier.de" target="_blank">https://dblp.uni-trier.de</a></p>				
 			</ul>
 		</td>
         <td>
