--- a/cg/index.html
+++ b/cg/index.html
@@ -769,6 +769,23 @@ Computer Graphics</font></b></p>
 				<p class="MsoNormal">
 				</p></td>
 			</tr>
+			<tr>
+				<td valign="top" style="width: 171px; border-left: 1.0pt solid windowtext; border-right: 1.0pt solid windowtext; border-top: medium none; border-bottom: 1.0pt solid windowtext; padding-left: 5.4pt; padding-right: 5.4pt; padding-top: 0cm; padding-bottom: 0cm">
+				<p class="MsoNormal"><span lang="en-us">
+				<font face="Times New Roman" size="4">第十一周</font></span></p><p class="MsoNormal">
+				<font face="Times New Roman" size="4">
+				<span lang="EN-US">2025.5.8</span></font></p></td>
+				<td valign="top" style="width: 366px; border-left: medium none; border-right: 1.0pt solid windowtext; border-top: medium none; border-bottom: 1.0pt solid windowtext; padding-left: 5.4pt; padding-right: 5.4pt; padding-top: 0cm; padding-bottom: 0cm">
+				<p class="MsoNormal"><font face="Times New Roman" size="4">
+				<span lang="EN-US">实验六-环境加载与场景渲染</span></font></p><p class="MsoNormal">
+				</p></td>
+				<td valign="top" style="width: 277px; border-left: medium none; border-right: 1.0pt solid windowtext; border-top: medium none; border-bottom: 1.0pt solid windowtext; padding-left: 5.4pt; padding-right: 5.4pt; padding-top: 0cm; padding-bottom: 0cm">
+				<p class="MsoNormal"><font face="Times New Roman" size="4">
+				<a href="https://pan.bnu.edu.cn/l/51Q6F5" target="_blank">实验六-实验任务</a></font></p>
+				本次实验作业无参考教程
+				<p class="MsoNormal">
+				</p></td>
+			</tr>
 			</tbody></table>
 		</td>
 		</tr>
@@ -784,6 +801,13 @@ Computer Graphics</font></b></p>
 				<p class="MsoNormal"><span lang="en-us">【<b><font face="华文楷体">第一次平时作业：包含实验一/二/三</font></b>】</span></p></li>
 				<p class="MsoNormal"><span lang="en-us"><b><font face="华文楷体">作业题目及分值：</font></b><a href="https://pan.bnu.edu.cn/l/m1EanG" target="_blank">https://pan.bnu.edu.cn/l/m1EanG</a></span></p>
 				<p class="MsoNormal"><span lang="en-us"><b><font face="华文楷体">提交链接：</font></b><a href="https://pan.bnu.edu.cn/l/T1YdOs" target="_blank">https://pan.bnu.edu.cn/l/T1YdOs</a><b><font face="华文楷体">，命名方式：学号-姓名-第一次平时作业，.zip等压缩包格式，需要包含文档和源代码，可选择附上效果演示视频，截止时间：2025年4月6日23:59</font></b></span></p>
+			    </li>
+			</ul>
+			<ul>
+				<li>
+				<p class="MsoNormal"><span lang="en-us">【<b><font face="华文楷体">第二次平时作业：包含实验四/五/六</font></b>】</span></p></li>
+				<p class="MsoNormal"><span lang="en-us"><b><font face="华文楷体">作业题目及分值：</font></b><a href="https://pan.bnu.edu.cn/l/t1YfkS" target="_blank">https://pan.bnu.edu.cn/l/t1YfkS</a></span></p>
+				<p class="MsoNormal"><span lang="en-us"><b><font face="华文楷体">提交链接：</font></b><a href="https://pan.bnu.edu.cn/l/O1AooN" target="_blank">https://pan.bnu.edu.cn/l/O1AooN</a><b><font face="华文楷体">，命名方式：学号-姓名-第二次平时作业，.zip等压缩包格式，需要包含文档和源代码，可选择附上效果演示视频，截止时间：2025年5月18日23:59</font></b></span></p>
 			    </li>
 			</ul>
 		</td>
