--- a/aw/index.html
+++ b/aw/index.html
@@ -521,6 +521,22 @@ table.MsoTableGrid
 				<a href="https://pan.bnu.edu.cn/l/n1SXLa" target="_blank">PPT</a></font></span></p><p class="MsoNormal">
 				</p></td>
 			</tr>
+			<tr>
+			<td valign="top" style="width: 171px; border-left: 1.0pt solid windowtext; border-right: 1.0pt solid windowtext; border-top: medium none; border-bottom: 1.0pt solid windowtext; padding-left: 5.4pt; padding-right: 5.4pt; padding-top: 0cm; padding-bottom: 0cm">
+				<p class="MsoNormal"><span lang="en-us">
+				<font face="Times New Roman" size="4">第十三周</font></span></p><p class="MsoNormal">
+				<font face="Times New Roman" size="4">
+				<span lang="EN-US">2025.5.19</span></font></p></td>
+				<td valign="top" style="width: 366px; border-left: medium none; border-right: 1.0pt solid windowtext; border-top: medium none; border-bottom: 1.0pt solid windowtext; padding-left: 5.4pt; padding-right: 5.4pt; padding-top: 0cm; padding-bottom: 0cm">
+				<p class="MsoNormal"><font face="Times New Roman" size="4">
+				<span lang="EN-US">学术英语与表达逻辑</span></font></p><p class="MsoNormal">
+				</p></td>
+				<td valign="top" style="width: 277px; border-left: medium none; border-right: 1.0pt solid windowtext; border-top: medium none; border-bottom: 1.0pt solid windowtext; padding-left: 5.4pt; padding-right: 5.4pt; padding-top: 0cm; padding-bottom: 0cm">
+				<p class="MsoNormal">
+				<span lang="en-us"><font face="Times New Roman" size="4">
+				<a href="https://pan.bnu.edu.cn/l/n1SXLa" target="_blank">PPT</a></font></span></p><p class="MsoNormal">
+				</p></td>
+			</tr>
 			</tbody></table>
 		<p class="MsoNormal">&nbsp;</p></td>
       </tr>
@@ -537,6 +553,7 @@ table.MsoTableGrid
 				<li>
 				<p class="MsoNormal"><span lang="en-us">【<b><font face="华文楷体">第一次作业：文献检索（个人作业）</font></b>】</span></p></li>
 				<p class="MsoNormal"><span lang="en-us"><b><font face="华文楷体">提交链接：</font></b><a href="https://pan.bnu.edu.cn/l/V1IbWK" target="_blank">https://pan.bnu.edu.cn/l/V1IbWK</a><b><font face="华文楷体">，命名方式：学号-姓名-第一次平时作业.pdf，截止时间：2025年3月23日23:59</font></b></span></p></li>
+				<p class="MsoNormal"><span lang="en-us"><b><font face="华文楷体">第一次作业易错题目解析：</font></b><a href="https://pan.bnu.edu.cn/l/y173CX" target="_blank">https://pan.bnu.edu.cn/l/y173CX</a><b><font face="华文楷体"></font></b></span></p></li>
 				<li><font size="4">完成以下检索任务，作业文档中包括关键截图：</font></li>
 1、出版物和文献的量化指标<br />
 a)在JCR官网上查找某一期刊的最新影响因子<br />
