--- a/cg/index.html
+++ b/cg/index.html
@@ -669,7 +669,7 @@ Computer Graphics</font></b></p>
 				<td valign="top" style="width: 277px; border-left: medium none; border-right: 1.0pt solid windowtext; border-top: medium none; border-bottom: 1.0pt solid windowtext; padding-left: 5.4pt; padding-right: 5.4pt; padding-top: 0cm; padding-bottom: 0cm">
 				<p class="MsoNormal">
 				<span lang="en-us"><font face="Times New Roman" size="4">
-				<a href="https://pan.bnu.edu.cn/l/t173Pg" target="_blank">PPT（课前版本）</a></font></span></p><p class="MsoNormal">
+				<a href="https://pan.bnu.edu.cn/l/t173Pg" target="_blank">PPT</a></font></span></p><p class="MsoNormal">
 				</p>
 				</td>
 			</tr>
@@ -972,6 +972,9 @@ Computer Graphics</font></b></p>
 			<li><font size="4">清华大学-胡事民：《<a href="https://cg.cs.tsinghua.edu.cn/course" target="_blank">计算机图形学</a>》</font></li>
 			<li><font size="4">中国科学技术大学-刘利刚：《<a href="http://staff.ustc.edu.cn/~lgliu/#Teaching" target="_blank">计算机图形学</a>》</font></li>
 			<li><font size="4">加州大学圣芭芭拉分校-闫令琪：《<a href="https://games-cn.org/intro-graphics" target="_blank">现代计算机图形学入门</a>》(GAMES-101课程)</font></li>
+			<li><font size="4">俄亥俄州立大学/凌迪-王华民：《<a href="https://games-cn.org/intro-graphics" target="_blank">基于物理的计算机动画入门</a>》(GAMES-103课程)</font></li>
+			<li><font size="4">麻省理工学院-胡渊鸣：《<a href="https://games-cn.org/games201" target="_blank">高级物理引擎实战指南2020</a>》(GAMES-201课程)</font></li>
+			<li><font size="4">北京大学-刘利斌：《<a href="https://games-cn.org/games105" target="_blank">计算机角色动画基础</a>》(GAMES-105课程)</font></li>
 			<li>
 			<p class="MsoNormal"><span lang="en-us">【<b><font face="华文楷体">图形学前沿进展课程</font></b>】</span></p></li>
 			<li><font size="4">中国科学技术大学暑期课程：《<a href="https://ustc-gcl-f.github.io/course/SummerSchool_2024/index.html" target="_blank">计算机图形学前沿</a>》</font></li>
