--- a/cg/index.html
+++ b/cg/index.html
@@ -904,6 +904,24 @@ Computer Graphics</font></b></p>
 				<p class="MsoNormal">
 				</p></td>
 			</tr>
+			<tr>
+				<td valign="top" style="width: 171px; border-left: 1.0pt solid windowtext; border-right: 1.0pt solid windowtext; border-top: medium none; border-bottom: 1.0pt solid windowtext; padding-left: 5.4pt; padding-right: 5.4pt; padding-top: 0cm; padding-bottom: 0cm">
+				<p class="MsoNormal"><span lang="en-us">
+				<font face="Times New Roman" size="4">第十五周</font></span></p><p class="MsoNormal">
+				<font face="Times New Roman" size="4">
+				<span lang="EN-US">2025.6.5</span></font></p></td>
+				<td valign="top" style="width: 366px; border-left: medium none; border-right: 1.0pt solid windowtext; border-top: medium none; border-bottom: 1.0pt solid windowtext; padding-left: 5.4pt; padding-right: 5.4pt; padding-top: 0cm; padding-bottom: 0cm">
+				<p class="MsoNormal"><font face="Times New Roman" size="4">
+				<span lang="EN-US">实验九-角色动画-SMPL人体模型</span></font></p><p class="MsoNormal">
+				</p></td>
+				<td valign="top" style="width: 277px; border-left: medium none; border-right: 1.0pt solid windowtext; border-top: medium none; border-bottom: 1.0pt solid windowtext; padding-left: 5.4pt; padding-right: 5.4pt; padding-top: 0cm; padding-bottom: 0cm">
+				<p class="MsoNormal"><font face="Times New Roman" size="4">
+				<a href="https://pan.bnu.edu.cn/l/C1Y0f1" target="_blank">实验九-实验任务</a></font></p>
+				<p class="MsoNormal"><font face="Times New Roman" size="4">
+				<a href="https://pan.bnu.edu.cn/l/z1Eh2Q" target="_blank">实验九-实验数据</a></font></p>
+				<p class="MsoNormal">
+				</p></td>
+			</tr>
 			</tbody></table>
 		</td>
 		</tr>
@@ -972,7 +990,8 @@ Computer Graphics</font></b></p>
 			<li><font size="4">清华大学-胡事民：《<a href="https://cg.cs.tsinghua.edu.cn/course" target="_blank">计算机图形学</a>》</font></li>
 			<li><font size="4">中国科学技术大学-刘利刚：《<a href="http://staff.ustc.edu.cn/~lgliu/#Teaching" target="_blank">计算机图形学</a>》</font></li>
 			<li><font size="4">加州大学圣芭芭拉分校-闫令琪：《<a href="https://games-cn.org/intro-graphics" target="_blank">现代计算机图形学入门</a>》(GAMES-101课程)</font></li>
-			<li><font size="4">俄亥俄州立大学/凌迪-王华民：《<a href="https://games-cn.org/intro-graphics" target="_blank">基于物理的计算机动画入门</a>》(GAMES-103课程)</font></li>
+			<li><font size="4">中国科学技术大学-刘利刚：《<a href="https://games-cn.org/games102" target="_blank">几何建模与处理</a>》(GAMES-102课程)</font></li>
+			<li><font size="4">俄亥俄州立大学/凌迪-王华民：《<a href="https://games-cn.org/games103" target="_blank">基于物理的计算机动画入门</a>》(GAMES-103课程)</font></li>
 			<li><font size="4">麻省理工学院-胡渊鸣：《<a href="https://games-cn.org/games201" target="_blank">高级物理引擎实战指南2020</a>》(GAMES-201课程)</font></li>
 			<li><font size="4">北京大学-刘利斌：《<a href="https://games-cn.org/games105" target="_blank">计算机角色动画基础</a>》(GAMES-105课程)</font></li>
 			<li>
