--- a/cg/index.html
+++ b/cg/index.html
@@ -368,9 +368,9 @@ Computer Graphics</font></b></p>
       <tr>
         <td>
 		<ul>
-			<!-- <li>
+			<li>
 			<p align="left"><font size="4" face="Times New Roman">
-			2025年3月6日：【实验内容】第一次实验作业内容已发布</font></p></li> -->
+			2025年6月6日：【课程知识点思维导图(预览版)】已发布：<a href="https://bnu-3dv-lab.feishu.cn/wiki/HXBawRAtciCYedkoj7ZctcmLnJg#mindmap" target="_blank">思维导图预览版</a></font></p></li>
 			<li>
 			<p align="left"><font size="4" face="Times New Roman">
 			2025年2月25日：【课程主页】本课程的主页已搭建，后续添加模块和内容</font></p></li>
@@ -944,6 +944,19 @@ Computer Graphics</font></b></p>
 				<p class="MsoNormal"><span lang="en-us">【<b><font face="华文楷体">第二次平时作业：包含实验四/五/六</font></b>】</span></p></li>
 				<p class="MsoNormal"><span lang="en-us"><b><font face="华文楷体">作业题目及分值：</font></b><a href="https://pan.bnu.edu.cn/l/t1YfkS" target="_blank">https://pan.bnu.edu.cn/l/t1YfkS</a></span></p>
 				<p class="MsoNormal"><span lang="en-us"><b><font face="华文楷体">提交链接：</font></b><a href="https://pan.bnu.edu.cn/l/O1AooN" target="_blank">https://pan.bnu.edu.cn/l/O1AooN</a><b><font face="华文楷体">，命名方式：学号-姓名-第二次平时作业，.zip等压缩包格式，需要包含文档和源代码，可选择附上效果演示视频，截止时间：2025年5月18日23:59</font></b></span></p>
+			    </li>
+			</ul>
+			<ul>
+				<li>
+				<p class="MsoNormal"><span lang="en-us">【<b><font face="华文楷体">第三次平时作业：包含实验七/八/九</font></b>】</span></p></li>
+				<p class="MsoNormal"><span lang="en-us"><b><font face="华文楷体">提交链接：</font></b><a href="https://pan.bnu.edu.cn/l/B1Ppwg" target="_blank">https://pan.bnu.edu.cn/l/B1Ppwg</a><b><font face="华文楷体">，命名方式：学号-姓名-第三次平时作业，.zip等压缩包格式，需要包含文档和源代码，可选择附上效果演示视频，截止时间：2025年6月27日23:59</font></b></span></p>
+			    </li>
+			</ul>
+			<ul>
+				<li>
+				<p class="MsoNormal"><span lang="en-us">【<b><font face="华文楷体">第四次平时作业：理论课作业</font></b>】</span></p></li>
+				<p class="MsoNormal"><span lang="en-us"><b><font face="华文楷体">作业题目：</font></b><a href="https://pan.bnu.edu.cn/l/j1fo8g" target="_blank">https://pan.bnu.edu.cn/l/j1fo8g</a></span></p>
+				<p class="MsoNormal"><span lang="en-us"><b><font face="华文楷体">提交链接：</font></b><a href="https://pan.bnu.edu.cn/l/q1ELrP" target="_blank">https://pan.bnu.edu.cn/l/q1ELrP</a><b><font face="华文楷体">，命名方式：学号-姓名-理论课作业，【请合并成一个文档】，截止时间：2025年6月30日23:59</font></b></span></p>
 			    </li>
 			</ul>
 		</td>
