--- a/cg/index.html
+++ b/cg/index.html
@@ -429,7 +429,7 @@ Computer Graphics</font></b></p>
 				<td valign="top" style="width: 277px; border-left: medium none; border-right: 1.0pt solid windowtext; border-top: medium none; border-bottom: 1.0pt solid windowtext; padding-left: 5.4pt; padding-right: 5.4pt; padding-top: 0cm; padding-bottom: 0cm">
 				<p class="MsoNormal">
 				<span lang="en-us"><font face="Times New Roman" size="4">
-				<a >PPT (待上传)</a></font></span></p><p class="MsoNormal">
+				<a href="https://pan.bnu.edu.cn/l/t173Pg" target="_blank">PPT</a></font></span></p><p class="MsoNormal">
 				</p></td>
 			</tr>
 			<tr>
