--- a/aw/index.html
+++ b/aw/index.html
@@ -634,9 +634,9 @@ b)摘录其中表达转折、递进、承接等连接词汇(如However, Besides,
 				<p class="MsoNormal"><span lang="en-us">【<b><font face="华文楷体">课程大作业：写作与表达综合练习（个人作业）</font></b>】</span></p></li>
 				<p class="MsoNormal"><span lang="en-us"><b><font face="华文楷体">提交链接：</font></b><a href="https://pan.bnu.edu.cn/l/Z1fXzD" target="_blank">https://pan.bnu.edu.cn/l/Z1fXzD</a><b><font face="华文楷体">，命名方式：学号-姓名-课程大作业.pdf或.zip，截止时间：2025年6月30日23:59</font></b></span></p></li>
 				<li><font size="4">大作业可选择以下其中一种形式提交：</font></li>
-a)根据感兴趣研究方向撰写一篇综述论文，语言/字数/页数不限，如有发现AI生成虚假文献则判定0分<br />
-b)待投稿/已投稿/已录用/已发表的论文（需要将个人贡献部分单独成一份文档，并提供原论文文档及其全部作者名字和排序）<br />
-c)将先前项目(如本基等)成果整理成海报和项目网页（需要在文档中包含海报、网页效果截图介绍、以及网页访问链接）<br />
+a)根据感兴趣研究方向撰写一篇综述论文，语言/字数/页数不限，如有发现AI生成虚假文献则判定0分；<br />
+b)待投稿/已投稿/已录用/已发表的论文（需要将个人贡献部分单独成一份文档，并提供原论文文档及其全部作者名字和排序）；<br />
+c)将先前项目(如本基等)成果整理成海报和项目网页（需要在文档中包含海报、网页效果截图介绍、以及网页访问链接）；<br />
 			</ul>
 		</td>
         <td>
