--- a/cg/index.html
+++ b/cg/index.html
@@ -994,9 +994,9 @@ Computer Graphics</font></b></p>
         <p class="MsoNormal">&nbsp;</p><p class="MsoNormal"><span lang="EN-US">
 		<font size="4" face="黑体">参考教材：</font></span></p><ul>
 			<li>
-			<p class="MsoNormal"><span lang="en-us">【<b><font face="华文楷体">计算机图形学基础教程</font></b>】</span></p></li>
+			<p class="MsoNormal"><span lang="en-us">【<b><font face="华文楷体">现代计算机图形学基础</font></b>】</span></p></li>
 			<li>
-			<p class="MsoNormal"><span lang="en-us"><a href="http://www.tup.tsinghua.edu.cn/booksCenter/book_11085601.html" target="_blank">现代计算机图形学基础(第2版)，黄华、张磊著</a></span></p></li>
+			<p class="MsoNormal"><span lang="en-us"><a href="http://www.tup.tsinghua.edu.cn/booksCenter/book_11085601.html" target="_blank">现代计算机图形学基础（第2版），黄华、张磊著</a></span></p></li>
 			<li>
 			<p class="MsoNormal"><span lang="en-us">【<b><font face="华文楷体">计算机图形学（OpenGL版）</font></b>】</span></p></li>
 			<li>
