--- a/pymaf/index.html
+++ b/pymaf/index.html
@@ -156,7 +156,7 @@
   <div class="hero-body">
     <div class="columns is-centered has-text-centered">
   <div class="is-size-3 publication-authors">
-       <span class="author-block">[Update] 🚩 Please see <a href="https://www.liuyebin.com/pymaf-x" target="_blank">PyMAF-X [TPAMI 2023]</a> for full-body model recovery.
+       <span class="author-block">[Update] 🚩 Please see <a href="https://zhanghongwen.cn/pymaf-x" target="_blank">PyMAF-X [TPAMI 2023]</a> for full-body motion capture.
        </span>
   </div>
   </div>
