--- a/Timer/index.html
+++ b/Timer/index.html
@@ -126,7 +126,7 @@
         
         <div id="controls-wrapper">
             <div id="controls">
-                <span class="control-label">Set timer<br>(HH:MM:SS):</span>
+                <span class="control-label">Set Timer<br>(HH:MM:SS):</span>
                 <input type="text" id="time-input" value="00:10:00">
                 <button id="btn-start">Start</button>
                 <button id="btn-reset">Reset</button>
