--- a/vlogQC/index.html
+++ b/vlogQC/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>视频质量检测系统v2.1</title>
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <style>
@@ -62,7 +65,7 @@
         <div class="container-fluid p-0">
             <div class="row g-0">
                 <div class="col-md-2 sidebar">
-                    <h5 class="text-center mb-4"><i class="bi bi-film"></i> 视频检测系统</h5>
+                    <h5 class="text-center mb-4"><i class="bi bi-film"></i> 视频检测系统v2.1</h5>
                     <div class="text-center mb-4 text-white-50 small">
                         <i class="bi bi-person-circle fs-4 mb-1 d-block text-white"></i>
                         <div class="badge bg-secondary mt-1">{{ mode === 'single' ? '单用户模式' : '多用户模式' }}</div>
