--- a/vlogQC/index.html
+++ b/vlogQC/index.html
@@ -6,6 +6,17 @@
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
+    <script>
+      (function(){
+        try {
+          var url = new URL(window.location.href);
+          if (!url.searchParams.has('v')) {
+            url.searchParams.set('v', Date.now().toString());
+            window.location.replace(url.toString());
+          }
+        } catch(e) {}
+      })();
+    </script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <style>
