--- a/admission/index.html
+++ b/admission/index.html
@@ -37,6 +37,7 @@
       <div class="d-flex gap-2">
         <button class="btn btn-primary-soft tab-btn" id="btn-intern"><i class="bi bi-person-workspace me-1"></i> 科研实习生报名</button>
         <button class="btn btn-primary-soft tab-btn" id="btn-grad"><i class="bi bi-mortarboard-fill me-1"></i> 硕/博学生报名</button>
+        <a class="btn btn-primary-soft tab-btn ms-auto" href="https://zhanghongwen.cn" target="_blank" rel="noopener"><i class="bi bi-info-circle me-1"></i> 了解课题组信息</a>
       </div>
     </div>
     <div id="section-landing" class="card card-custom p-5 mb-3 landing-card">
