--- a/admission/index.html
+++ b/admission/index.html
@@ -105,5 +105,8 @@
     else if(mode==='grad') showGrad()
     else showLanding()
   </script>
+
+<a ><img style="height:0;" src="//www.clustrmaps.com/map_v2.png?d=BXQ58F8bS9rau1y_-RgqipJX-3Yhu3Osuh_9FkqiUvk&cl=ffffff"/></a>
+
 </body>
 </html>
