--- a/admission/index.html
+++ b/admission/index.html
@@ -22,6 +22,11 @@
     .option-list{width:100%;max-width:640px;margin-left:auto;margin-right:auto;margin-top:auto;margin-bottom:auto;justify-items:center}
     .option-btn{padding:1rem 1.25rem;font-size:1.125rem;width:100%;max-width:420px}
     .landing-title{font-weight:700;color:#0d6efd}
+    @media (max-width: 576px) {
+      #top-tabs .d-flex{flex-direction:column;gap:.75rem}
+      #top-tabs .tab-btn{width:100%}
+      #top-tabs .ms-auto{margin-left:0 !important}
+    }
   </style>
 </head>
 <body>
