--- a/admission/index.html
+++ b/admission/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>招生报名 | Admission</title>
+  <title>申请加入 | Admission</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
   <style>
@@ -57,14 +57,14 @@
     <div id="section-intern" class="card card-custom p-4">
       <h5 class="section-title mb-3"><i class="bi bi-person-workspace text-primary me-1"></i> 科研实习生报名</h5>
       <div class="mb-3" style="height:75vh">
-        <iframe src="https://f.wps.cn/g/wJcXYNaH/" title="科研实习生报名表" style="width:100%;height:100%;border:0" allowfullscreen referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe src="https://bnu-3dv-lab.feishu.cn/share/base/form/shrcnUpW5A5epmXOYcc7Qn4DvCb" title="科研实习生报名表" style="width:100%;height:100%;border:0" allowfullscreen referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
     </div>
 
     <div id="section-grad" class="card card-custom p-4 mt-4">
       <h5 class="section-title mb-3"><i class="bi bi-mortarboard-fill text-primary me-1"></i> 硕/博学生报名</h5>
       <div class="mb-3" style="height:75vh">
-        <iframe src="https://f.wps.cn/g/wJcXYNaH/" title="硕/博学生报名表" style="width:100%;height:100%;border:0" allowfullscreen referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe src="https://bnu-3dv-lab.feishu.cn/share/base/form/shrcnlBOskuEx32CEzqbie7LD7d" title="硕/博学生报名表" style="width:100%;height:100%;border:0" allowfullscreen referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
     </div>
   </div>
